--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.41.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "electron": "^33.4.11"
