--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Ambient Learning Agent System — Python dependencies
+python-dotenv>=1.0.0
 uagents>=0.13.0
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
